cmake_minimum_required(VERSION 3.24)
project(CodeWithCorJava)

set(CMAKE_CXX_STANDARD 14)

add_executable(Prime_factorization li-jihong/2023-03/29/Prime_factorization.cpp)
add_executable(Decimal_in_the_NTH_place li-jihong/2023-03/29/Decimal_in_the_NTH_place.cpp)
add_executable(Prime_number li-jihong/2023-03/29/Prime_number.cpp)