cmake_minimum_required(VERSION 3.24)
project(CodeWithCorJava)

set(CMAKE_CXX_STANDARD 14)

add_executable(Prime_factorization li-jihong/2023-03/29/Prime_factorization.cpp)
add_executable(Decimal_in_the_NTH_place li-jihong/2023-03/29/Decimal_in_the_NTH_place.cpp li-jihong/2023-03/30/zuidagongyueshu.cpp li-jihong/2023-03/30/luanshengsushu.cpp li-jihong/2023-03/30/zhiyinzi.cpp li-jihong/2023-03/30/test.cpp li-jihong/2023-03/30/cuopaigongshi.cpp)
add_executable(Prime_number li-jihong/2023-03/29/Prime_number.cpp)
add_executable(test li-jihong/2023-03/30/test.cpp)
add_executable(sushu li-jihong/2023-03/30/sushu.cpp)
add_executable(zuidagongyueshu li-jihong/2023-03/30/zuidagongyueshu.cpp)
add_executable(luanshengsushu li-jihong/2023-03/30/luanshengsushu.cpp)
add_executable(zhiyinzi li-jihong/2023-03/30/zhiyinzi.cpp)

add_executable(cuopaigongshi li-jihong/2023-03/30/cuopaigongshi.cpp)