cmake_minimum_required(VERSION 3.24)
project(CodeWithCorJava)

set(CMAKE_CXX_STANDARD 14)

add_executable(Prime_factorization li-jihong/2023-03/29/Prime_factorization.cpp)
add_executable(Decimal_in_the_NTH_place li-jihong/2023-03/29/Decimal_in_the_NTH_place.cpp li-jihong/2023-03/30/zuidagongyueshu.cpp li-jihong/2023-03/30/luanshengsushu.cpp li-jihong/2023-03/30/zhiyinzi.cpp li-jihong/2023-03/30/zzz.cpp li-jihong/2023-03/30/cuopaigongshi.cpp)
add_executable(Prime_number li-jihong/2023-03/29/Prime_number.cpp)
add_executable(sushu li-jihong/2023-03/30/sushu.cpp li-jihong/2023-03/31/fanyingbi.cpp)
add_executable(zuidagongyueshu li-jihong/2023-03/30/zuidagongyueshu.cpp)
add_executable(luanshengsushu li-jihong/2023-03/30/luanshengsushu.cpp)
add_executable(zhiyinzi li-jihong/2023-03/30/zhiyinzi.cpp)

add_executable(cuopaigongshi li-jihong/2023-03/30/cuopaigongshi.cpp li-jihong/2023-03/30/yueshu.cpp li-jihong/2023-03/30/migonglujingshu.cpp li-jihong/2023-03/30/migongzhidingbushu.cpp li-jihong/2023-03/30/juzhenzuidaquanzhi.cpp li-jihong/2023-04/01/feixingyuanxiongdi.cpp li-jihong/2023-04/01/feixingyuanxiongdi.cpp li-jihong/2023-04/02/shudefanwei.cpp li-jihong/2023-04/02/shudesancifanggem.cpp li-jihong/2023-04/02/jiqirentiaoyue.cpp li-jihong/2023-04/02/sipingfanghe.cpp li-jihong/2023-04/02/fenqiaokeli.cpp li-jihong/2023-04/02/fenqiaokeli.cpp li-jihong/2023-04/02/qianzhuihe.cpp li-jihong/2023-04/02/qianzhuihe.cpp li-jihong/2023-04/03/zijuzhendehe.cpp li-jihong/2023-04/03/zijuzhendehe.cpp li-jihong/2023-04/03/jiguangzhadan.cpp li-jihong/2023-04/04/kbeiqujian.cpp li-jihong/2023-04/test.cpp)
add_executable(yueshu li-jihong/2023-03/30/yueshu.cpp)
add_executable(migonglujingshu li-jihong/2023-03/30/migonglujingshu.cpp)
add_executable(migongzhidingbushu li-jihong/2023-03/30/migongzhidingbushu.cpp)
add_executable(juzhenzuidaquanzhi li-jihong/2023-03/30/juzhenzuidaquanzhi.cpp)
add_executable(zzz li-jihong/2023-03/30/zzz.cpp li-jihong/2023-03/31/test.cpp li-jihong/2023-03/31/test.cpp)

add_executable(fanyingbi li-jihong/2023-03/31/fanyingbi.cpp li-jihong/2023-03/31/sushushai.cpp)
add_executable(sushushai li-jihong/2023-03/31/sushushai.cpp)
add_executable(feixingyuanxiongdi li-jihong/2023-04/01/feixingyuanxiongdi.cpp)
add_executable(shudefanwei li-jihong/2023-04/02/shudefanwei.cpp)
add_executable(shudesancifanggem li-jihong/2023-04/02/shudesancifanggem.cpp)
add_executable(jiqirentiaoyue li-jihong/2023-04/02/jiqirentiaoyue.cpp)
add_executable(sipingfanghe li-jihong/2023-04/02/sipingfanghe.cpp)
add_executable(fenqiaokeli li-jihong/2023-04/02/fenqiaokeli.cpp)
add_executable(qianzhuihe li-jihong/2023-04/02/qianzhuihe.cpp)
add_executable(zijuzhendehe li-jihong/2023-04/03/zijuzhendehe.cpp)

add_executable(jiguangzhadan li-jihong/2023-04/03/jiguangzhadan.cpp)
add_executable(kbeiqujian li-jihong/2023-04/04/kbeiqujian.cpp)

add_executable(1001.A+B_Format_20 li-jihong/PAT/AdvancedLevel_C++/1001.A+B_Format_20.cpp)
add_executable(1002.A+B_for_Polynomials_25 li-jihong/PAT/AdvancedLevel_C++/1002.A+B_for_Polynomials_25.cpp)
add_executable(1003.Emergency_25 li-jihong/PAT/AdvancedLevel_C++/1003.Emergency_25.cpp)
add_executable(test li-jihong/acwing/test.cpp)
